rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax01/Test.java
// .result=COMPILE_FAIL
import java.lang.annotation.ElementType;
import java.lang.annotation.Target;

public class Test {
	
	public interface TestInterface {
		@SomeAnnot
		default void m() { }
	}
	
	
	@Target({ElementType.PARAMETER}) 
	public @interface SomeAnnot {  
		String information() default "None";
	}
}